funland/pocket-id/pocket-id/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "id.batlab.io"
  rules:
    - backendRefs:
        - name: pocket-id
          port: 80
